--- a/static/css/chat-component/chatBox.css
+++ b/static/css/chat-component/chatBox.css
@@ -106,6 +106,10 @@
   position: relative;
 }
 
+.message .chat-message__content:hover {
+  opacity: 0.7;
+}
+
 .message .chat-message__thumbnail {
   max-height: var(--chat-message-thumbnail);
   border-radius: 50%;
@@ -155,13 +159,28 @@
   border-radius: 16px;
   background-color: var(--main-color-400);
   color: var(--wcag-white-color);
+
   text-align: center;
+  word-break: break-word;
 
   transform-style: preserve-3d;
   transform: translateZ(1px);
-  ;
 }
 
+/* Tin nhắn hình ảnh */
+.chat-message__content .image-message {
+  padding: unset;
+}
+
+.chat-message__content .image-message img {
+  border-radius: 16px;
+}
+
+/* Tin nhắn liên kết */
+
+.chat-message__content .link-message {
+  cursor: pointer;
+}
 
 /* guest message */
 
