--- a/static/css/base/scrollbar.css
+++ b/static/css/base/scrollbar.css
@@ -1,13 +1,12 @@
-/* :root {
-}
+:root {}
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--wcag-secondary-text-color);
-  border: 2px solid transparent;
-  border-radius: 4px;
+  border: 4px solid transparent;
+  border-radius: 8px;
   background-clip: padding-box;
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-} */
+  width: 12px;
+}
